--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,7 +1,20 @@
 appname = byn
 httpport = 8080
 runmode = dev
-autorender = false
-copyrequestbody = true
-EnableDocs = true
-sqlconn = 
+
+
+[redis]
+address=127.0.0.1:6379
+password=
+
+
+[mysql]
+w_host = 127.0.0.1
+w_port = 3306
+w_username = root
+w_password =
+w_database = test
+
+[log]
+filename = ./logs/byn.log
+level = debug
