--- a/conf/app.conf
+++ b/conf/app.conf
@@ -9,11 +9,11 @@ password=
 
 
 [mysql]
-w_host = 127.0.0.1
+w_host = rm-bp1xqhp60et1lx5z92o.mysql.rds.aliyuncs.com
 w_port = 3306
-w_username = root
-w_password =
-w_database = test
+w_username = taomama
+w_password = !qazxsw2
+w_database = rebate_test
 
 [log]
 filename = ./logs/byn.log
